--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li class="nav-item">
                     <select id="quickSearch" class="form-select">
                         <option value="">Quick Search</option>
-                        <option value="Delhi">AHmednagar</option>
-                        <option value="Prayagraj">Allahabad</option>
+                        <option value="Ahmednagar">Ahmednagar</option>
+                        <option value="Allahabad">Allahabad</option>
                         <option value="Mumbai">Mumbai</option>
                     </select>
                 </li>
